<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Monitoring Districts Simplified</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="button_activity_login">Sign In Or Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">LogIn</string>
    <string name="guest">Guest</string>
    <string name="district_name">District Name</string>
    <string name="date_of_joining">Date Of Joining</string>
    <string name="date_of_retirement">Date Of Retirement</string>
    <string name="on_visit">On Visit</string>
    <string name="sync">Sync Visit</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="view_programmes">View Programmes</string>
    <string name="view_map">View Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
