<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mansisharma.location6.LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="@dimen/sizeused"
            android:id="@+id/edit_text_username"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/edit_text_password"
            android:inputType="textPassword"
            android:paddingTop="@dimen/padding"
            android:textSize="@dimen/sizeused"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:paddingTop="@dimen/padding"
            android:id="@+id/button_submit"
            android:textSize="@dimen/sizeused"/>
    </LinearLayout>
</RelativeLayout>
