<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mansisharma.location6.ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/Primary_Black"
                android:textSize="@dimen/sizeused" />

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeused" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district_name"
                android:textColor="@color/Primary_Black"
                android:textSize="@dimen/sizeused" />

            <TextView
                android:id="@+id/textview_districtname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeused" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_joining"
                android:textColor="@color/Primary_Black"
                android:textSize="@dimen/sizeused" />

            <TextView
                android:id="@+id/textview_date_of_joining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeused" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_retirement"
                android:textColor="@color/Primary_Black"
                android:textSize="@dimen/sizeused" />

            <TextView
                android:id="@+id/textview_date_of_retirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeused" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_on_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/on_visit"
        android:layout_marginBottom="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:textSize="@dimen/sizeused" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_on_visit"
        android:layout_alignParentEnd="true"
        android:text="@string/sync"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        android:textSize="@dimen/sizeused"
        android:layout_alignParentRight="true" />

</RelativeLayout>
